--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
         <button id="close">&times;</button>
         <nav>
           <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#Shop">Projects</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="project.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -62,9 +62,9 @@
     <div class="footer-links col-span-4 m-col-span-4 l-col-span-4">
       <h4>Quick Links</h4>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="project.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
 
