--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <button id="close">&times;</button>
       <nav>
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#Shop">Projects</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="project.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -48,7 +48,7 @@
 
 Outside of design, you'll usually find me enjoying good food, watching sports, or grinding through video games — the things that keep me inspired and energized.</p>
 
-      <a href="#contact" class="btn">Contact Me</a>
+      <a href="contact.html" class="btn">Contact Me</a>
     </div>
   </section>
 
@@ -78,7 +78,7 @@ Outside of design, you'll usually find me enjoying good food, watching sports, o
     </div>
 
     <div class="btn-projects col-span-full m-col-start-2 m-col-end-12 l-col-start-2 l-col-end-12">
-      <a href="featured-projects.html" class="btn-featured">View All Featured Projects</a>
+      <a href="project.html" class="btn-featured">View All Featured Projects</a>
     </div>
   </section>
 
@@ -158,9 +158,9 @@ Outside of design, you'll usually find me enjoying good food, watching sports, o
     <div class="footer-links col-span-4 m-col-span-4 l-col-span-4">
       <h4>Quick Links</h4>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="project.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
 
