--- a/project.html
+++ b/project.html
@@ -10,6 +10,7 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
 </head>
+<body>
 
 <header class="full-width-header">
     <div class="grid-con">
@@ -30,52 +31,50 @@
         </nav>
       </div>
     </div>
-  </header>
+</header>
 
-  <section class="p-contact-page grid-con">
-
-  <!-- Centered Text -->
+<section class="p-contact-page grid-con">
   <div class="p-contact-text col-span-full">
     <h2>My Collection</h2>
     <p>Explore my work and discover how ideas come to life</p>
   </div>
 </section>
 
-    <section class="p-featured-work grid-con">
-    <div class="p-work-box col-span-4 m-col-start-2 m-col-end-7 l-col-start-2 l-col-end-7">
-      <a href="seven.html" class="p-work-box-link">
+<section class="p-featured-work grid-con">
+  <div class="p-work-box col-span-4 m-col-start-2 m-col-end-7 l-col-start-2 l-col-end-7">
+    <a href="seven.html" class="p-work-box-link">
       <h3 class="p-work-title">Seven</h3>
       <img src="images/1280-placeholder.jpg" alt="Project 1" class="work-img">
       <p class="work-desc">This is a detailed description of Project One. It will appear when you click the box.</p>
-      </a>
-    </div>
+    </a>
+  </div>
 
-    <div class="p-work-box col-span-4 m-col-start-7 m-col-end-12 l-col-start-7 l-col-end-12">
-      <a href="kingbuds.html" class="p-work-box-link">
+  <div class="p-work-box col-span-4 m-col-start-7 m-col-end-12 l-col-start-7 l-col-end-12">
+    <a href="kingbuds.html" class="p-work-box-link">
       <h3 class="p-work-title">Kingbuds</h3>
       <img src="images/kingbuds-placeholder.jpg" alt="Project 2" class="p-work-img">
-      <p class="p-work-desc">Description for Project Two goes here. Click to see more.</p>
-      </a>
-   </div>
+      <p class="work-desc">Description for Project Two goes here. Click to see more.</p>
+    </a>
+  </div>
 
-    <div class="p-work-box col-span-4 m-col-start-2 m-col-end-7 l-col-start-2 l-col-end-7">
-      <a href="industry-night.html" class="p-work-box-link">
+  <div class="p-work-box col-span-4 m-col-start-2 m-col-end-7 l-col-start-2 l-col-end-7">
+    <a href="industry-night.html" class="p-work-box-link">
       <h3 class="p-work-title">Industry Night</h3>
       <img src="images/industry-night-placeholder.jpg" alt="Project 3" class="p-work-img">
-      <p class="p-work-desc">Project Three description is hidden until clicked.</p>
-      </a>
-    </div>
+      <p class="work-desc">Project Three description is hidden until clicked.</p>
+    </a>
+  </div>
 
-    <div class="p-work-box col-span-4 m-col-start-7 m-col-end-12 l-col-start-7 l-col-end-12">
-      <a href="burple.html" class="p-work-box-link">
+  <div class="p-work-box col-span-4 m-col-start-7 m-col-end-12 l-col-start-7 l-col-end-12">
+    <a href="burple.html" class="p-work-box-link">
       <h3 class="p-work-title">Burple</h3>
       <img src="images/burple-placeholder.jpg" alt="Project 4" class="p-work-img">
-      <p class="p-work-desc">Details about Project Four will appear on click.</p>
+      <p class="work-desc">Details about Project Four will appear on click.</p>
     </a>
-    </div>
-  </section>
+  </div>
+</section>
 
-  <footer class="site-footer">
+<footer class="site-footer">
   <hr>
   <div class="footer-container grid-con">
     <div class="footer-about col-span-4 m-col-span-4 l-col-span-4">
@@ -114,3 +113,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/ScrollTrigger.js"></script>
 <script src="js/main.js"></script>
 <script src="js/animations.js"></script>
+
+</body>
+</html>
